syntax = "proto3";

package user_v1;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "validate/validate.proto";

option go_package="github.com/zd4r/auth/pkg/user_v1;user_v1";

service UserV1 {
  rpc Create(CreateRequest) returns (google.protobuf.Empty);
  rpc Get(GetRequest) returns (GetResponse);
  rpc Update(UpdateRequest) returns (google.protobuf.Empty);
  rpc Delete(DeleteRequest) returns (google.protobuf.Empty);
}

message User {
  string username = 1 [(validate.rules).string.min_len = 4, (validate.rules).string.not_contains = " "];
  string email = 2 [(validate.rules).string.email = true];
  string password = 3 [(validate.rules).string.min_len = 8, (validate.rules).string.not_contains = " "];
  RoleInfo role = 5;
}

message UserNullable {
  google.protobuf.StringValue username = 1 [(validate.rules).string.min_len = 4, (validate.rules).string.not_contains = " "];
  google.protobuf.StringValue email = 2 [(validate.rules).string.email = true];
  google.protobuf.StringValue password = 3 [(validate.rules).string.min_len = 8, (validate.rules).string.not_contains = " "];
  RoleInfo role = 5;
}

message UserInfo {
  User user = 1;
  google.protobuf.Timestamp created_at = 2;
  google.protobuf.Timestamp updated_at = 3;
}

enum RoleInfo {
  USER = 0;
  ADMIN = 1;
}

message CreateRequest {
  User user = 1;
  string password_confirm = 4 [(validate.rules).string.min_len = 8, (validate.rules).string.not_contains = " "];
}

message GetRequest {
  string username = 1 [(validate.rules).string.min_len = 4, (validate.rules).string.not_contains = " "];
}

message GetResponse {
  UserInfo userInfo = 1;
}

message UpdateRequest {
  string username = 1;
  UserNullable user = 2;
}

message DeleteRequest {
  string username = 1 [(validate.rules).string.min_len = 4, (validate.rules).string.not_contains = " "];
}